# BrainBurst

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  empty_issue.md  feature_request.md
brainburst/: asgi.py  settings.py  urls.py  wsgi.py
builder/: models.py  tests.py  urls.py  views.py
builder/management/commands/: load_ideas.py  load_plans.py
builder/migrations/: 0001_initial.py
data/: ideas.json  ideas.yaml  plans.json  plans.yaml
templates/: base.html
templates/builder/: home.html  idea_detail.html  idea_list.html  plan_detail.html  plan_list.html
